[gd_scene load_steps=6 format=3 uid="uid://biagvoa707qhp"]

[ext_resource type="Script" path="res://entity/enemy/enemy_base.gd" id="1_l0kh0"]
[ext_resource type="Texture2D" uid="uid://bj0nex3vjtpln" path="res://assets/icon.svg" id="2_840nr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_31ax4"]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kyhhv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aifd1"]
radius = 10.4403

[node name="EnemyBase" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent")]
z_index = 1
collision_layer = 8
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_l0kh0")
nav_agent = NodePath("ChasingAI/NavigationAgent2D")
target_distance = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.38419e-07, 0)
scale = Vector2(0.118499, 0.0657423)
texture = ExtResource("2_840nr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_31ax4")

[node name="ChasingAI" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="ChasingAI"]
path_desired_distance = 5.0
target_desired_distance = 50.0
path_postprocessing = 1
avoidance_enabled = true
radius = 8.0
debug_enabled = true

[node name="NavUpdateTimer" type="Timer" parent="ChasingAI"]
wait_time = 0.5
autostart = true

[node name="Aggro" type="Node2D" parent="."]

[node name="AggroRange" type="Area2D" parent="Aggro"]
collision_layer = 0
collision_mask = 2

[node name="AggroCollisionShape2D" type="CollisionShape2D" parent="Aggro/AggroRange"]
shape = SubResource("CircleShape2D_kyhhv")
debug_color = Color(0.941405, 0.119466, 0.527422, 0.42)

[node name="DeAggroRange" type="Area2D" parent="Aggro"]
collision_layer = 0
collision_mask = 2

[node name="DeAggroCollisionShape2D" type="CollisionShape2D" parent="Aggro/DeAggroRange"]
shape = SubResource("CircleShape2D_aifd1")

[connection signal="timeout" from="ChasingAI/NavUpdateTimer" to="." method="_on_nav_update_timer_timeout"]
[connection signal="area_entered" from="Aggro/AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="Aggro/DeAggroRange" to="." method="_on_de_aggro_range_area_exited"]
